--- a/composer.json
+++ b/composer.json
@@ -46,5 +46,6 @@
             ]
         }
     },
-    "minimum-stability": "stable"
+    "minimum-stability": "stable",
+    "prefer-stable": true
 }
