--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     ],
     "require": {
         "php": ">=7.1",
-        "illuminate/support": "5.8.*|^6.0|^7.0",
+        "illuminate/support": "5.8.*|^6.0|^7.0|^8.0",
         "vladimir-yuldashev/flysystem-curlftp": "^2.0"
     },
     "require-dev": {
